--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx http-server docs",
-    "build": "jsdoc -r -c jsdocconf.json --readme ./jsdocReadme.md",
+    "build": "jsdoc -r -c jsdocconf.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
