--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/snailcreature/assertivedocs/issues"
   },
-  "homepage": "https://github.com/snailcreature/assertivedocs-main#readme",
+  "homepage": "https://assertivedocs.snail.codes",
   "devDependencies": {
     "jsdoc": "^3.6.10"
   }
