--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Unit test plugin for JSDoc",
   "main": "plugin/assertivedocs/assertivedocs.js",
   "scripts": {
+    "start": "npx http-server ./docs",
+    "build": "jsdoc -r -c jsdocconf.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
